// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling
     
    $1,095.00
  </h2>
</div>
`;

exports[`Should correctly render multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expenses
     totalling
     
    $1,141.95
  </h2>
</div>
`;
